Add some icons (#921)
* Add getaround icon

* Add La Bobine icon

* Add Citiz icon

* Add LibraryThing icon

* Add TicketToRide icon

* Add ScoreApp 7 Wonders icon

* Add Swile icon

* Add UGC icon

* Fix Carrefour link

* Add Imgflip icon

* Add Luko icon

* Add Saisonkalender icon

* Fix swissborg icon

* Add Planity icon

* Add France identité icon

* Add Conjugaison icon

* Add EDF & Moi icon

* Add Santé wtw icon

* Add VerbEx icon

* Fix OpenFoodFacts icon

* small fixes

---------

Co-authored-by: Evgeny <mail@hexed.pw>
Co-authored-by: GitGitro <108683123+GitGitro@users.noreply.github.com>

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -305,3 +305,63 @@ spreeder:
 
 spritz:
   - com.spritz.newapp/com.spritz.newapp.MainActivity
+
+getaround:
+  - com.c4mprod.voiturelib/com.drivy.android.presentation.MainActivity
+
+la_bobine:
+  - com.bobine.bobineart/com.bobine.bobineart.MainActivity
+
+citiz:
+  - coop.lestilleuls.citiz/coop.lestilleuls.citiz.SplashActivity
+
+librarything:
+  - com.librarything.librarything/com.librarything.librarything.HomeActivity
+
+ticket_to_tide:
+  - com.marmalade.tickettoride/com.unity3d.player.UnityPlayerActivity
+
+scoreapp_7_wonders:
+  - com.houchins.andy.score7wonders/com.houchins.andy.score7wonders.activity.ChooseGameActivity
+
+swile:
+  - hr.lunc.client/hr.lunc.client.activities.SplashActivity
+
+ugc:
+  - air.ugc.fr.ugcdirect/com.ugc.MainActivity
+
+carrefour:
+  - com.carrefour.fid.android/com.carrefour.fid.android.presentation.ui.splash.SplashActivity
+
+imgflip:
+  - com.imgflip.twa/com.imgflip.twa.LauncherActivity
+
+luko:
+  - com.getluko.cover.app/com.getluko.cover.app.MainActivity
+
+saisonkalender:
+  - flunzmas.seasoncalendar/flunzmas.seasoncalendar.MainActivity
+
+swissborg:
+  - com.swissborg.android/com.swissborg.android.navigation.NavigationActivity
+
+planity:
+  - com.planitypublic/com.planitypublic.MainActivity
+
+france_identite:
+  - fr.gouv.franceidentite/fr.gouv.franceidentite.activities.MainActivity
+
+conjugaison:
+  - vatefaireconjuguer.app/vatefaireconjuguer.app.MainActivity
+
+edf_et_moi:
+  - com.edf.edfetmoi/com.edf.edfetmoi.presentation.feature.splash.presentation.SplashActivity
+
+sante_wtw:
+  - com.gras_savoye.sante/crc64f3dfc95746bfa99c.MainActivity
+
+verbex:
+  - org.educapp.verbex/org.educapp.verbex.MainActivity
+
+openfoodfacts:
+  - openfoodfacts.github.scrachx.openfood/org.openfoodfacts.app.MainActivity
