--- a/.github/workflows/check_conflicts.yml
+++ b/.github/workflows/check_conflicts.yml
@@ -5,27 +5,25 @@ on:
   workflow_dispatch:
   pull_request:
     paths:
-      - contribs/**
       - app/src/main/rec/drawable-nodpi/**
+      - contribs/**
 
 jobs:
   build:
     name: Check Conflicts
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: .github/scripts
     steps:
 
     - name: Checkout
       uses: actions/checkout@v4
 
-    - name: Export variables
-      run: bash .github/scripts/variables.sh >> $GITHUB_ENV
-
     - name: Install dependencies
       run: |
-        cd ${{ env.sd }}
         sudo pip install -r requirements.txt
 
     - name: Add new icons in dry mode
       run: |
-        cd ${{ env.sd }}
         python -u add_icons_wrapper.py
