--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
 		minSdkVersion rootProject.ext.MinSdk
 		targetSdkVersion rootProject.ext.TargetSdk
 		versionCode 194004
-		versionName "1.9.4"
+		versionName "1.9.4-beta0"
 		multiDexEnabled true
 
 		// Naming app bundles
