--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -8,3 +8,48 @@
 #
 # new_icon_2_alt_1: {}
 #
+
+amazon_minitv:
+  - com.amazon.minitv.android.app/com.amazon.minitv.android.app.activities.MiniTVMainActivity
+
+bitget:
+  - com.bitget.exchange/com.upex.exchange.splash.SplashActivity
+
+british_airways:
+  - com.ba.mobile/com.ba.mobile.splash.SplashActivity
+
+dailyal:
+  - io.github.jica98/com.teen.dailyanimelist.MainActivity
+
+fiio_music:
+  - com.fiio.music/com.fiio.music.activity.SplashActivity
+
+greythr:
+  - com.greytip.ghress/com.greytip.ghress.MainActivity
+
+meteoswiss:
+  - ch.admin.meteoswiss/ch.admin.meteoswiss.MainActivity
+
+notepad:
+  - notes.notepad.checklist.calendar.todolist.notebook/notes.notepad.checklist.calendar.todolist.notebook.page.WelcomeActivity
+
+offline_games:
+  - com.JindoBlu.OfflineGames/com.unity3d.player.UnityPlayerActivity
+
+pickme:
+  - com.pickme.passenger/com.pickme.passenger.feature.account.presentation.LandingActivity
+
+sleeptown:
+  - seekrtech.sleep/seekrtech.sleep.applications.SplashActivity
+
+tfl_oyster:
+  - uk.gov.tfl.oystercontactless/com.oyster.MainActivity
+
+tikkie:
+  - com.abnamro.nl.tikkie/com.abnamro.nl.mobile.applaunch.ui.launch.LaunchActivity
+
+winx_launcher:
+  - com.InternityLabs.Launcher.WinX/crc64b49898e1315006a0.MainActivity
+
+ze_delivery_de_bebidas:
+  - com.cerveceriamodelo.modelonow/com.cerveceriamodelo.modelonow.MainActivity
