--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -53,3 +53,30 @@ winx_launcher:
 
 ze_delivery_de_bebidas:
   - com.cerveceriamodelo.modelonow/com.cerveceriamodelo.modelonow.MainActivity
+
+mcdonalds:
+  - com.mcdonalds.mobileapp/.redesign.MainActivity
+
+kfc:
+  - com.kfc_cs/com.kfc_polska.ui.main.MainActivity
+
+samsung_game_launcher:
+  - com.samsung.android.game.gamehome/.app.MainActivity
+
+samsung_smart_switch:
+  - com.sec.android.easyMover/.ui.launch.LauncherActivity
+
+bluetooth_le_spam:
+  - de.simon.dankelmann.bluetoothlespam.debug/de.simon.dankelmann.bluetoothlespam.MainActivity
+
+proton_vpn:
+  - ch.protonvpn.android/.RoutingActivity
+
+linkora:
+  - com.sakethh.linkora/com.sakethh.linkora.MainActivity
+
+macsposed:
+  - com.berdik.macsposed/com.berdik.macsposed.ui.activity.MainActivity
+
+wa_mods:
+  - com.wmods.wppenhacer/com.wmods.wppenhacer.activities.MainActivity
