--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -80,3 +80,33 @@ macsposed:
 
 wa_mods:
   - com.wmods.wppenhacer/com.wmods.wppenhacer.activities.MainActivity
+
+enojei:
+  - br.com.enjoei.app/br.com.enjoei.app.monolith.activities.MainActivity
+
+findtaxi:
+  - org.sleepnova.android.taxi/org.sleepnova.android.taxi.FindTaxi
+
+fotmob:
+  - com.mobilefootie.wc2010/com.fotmob.android.ui.MainActivityWrapper
+
+geforce_now:
+  - com.nvidia.geforcenow/com.nvidia.geforcenow.MallActivity
+
+grocer:
+  - nz.grocer.twa/nz.grocer.twa.LauncherActivity
+
+hondalink:
+  - com.honda.hondalink.connect/com.honda.common.module.splash.view.activity.SplashActivity
+
+jal:
+  - com.jalglobalwallet.jgw/com.jalglobalwallet.jgw.presentation.ui.HandleAppLinksActivity
+
+orange_phone:
+  - com.orange.phone/com.orange.phone.DialtactsActivity
+
+vpn_kaspersky:
+  - com.kaspersky.secure.connection/com.kaspersky.remote.security_service.SplashScreenLauncherActivity
+
+yodobashi:
+  - com.yodobashi.iShop/com.yodobashi.iShop.YdMainActivity
