Add 2 new icons and 1 new componentinfo

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -110,3 +110,8 @@ vpn_kaspersky:
 
 yodobashi:
   - com.yodobashi.iShop/com.yodobashi.iShop.YdMainActivity
+
+lansforsakringar:
+  - se.lf.mobile.android/se.lf.mobile.feature.login.module.outside.OutsideActivity
+
+bank_id_alt_1: {}
