Add new ComponentInfo for WG Tunnel

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -115,3 +115,6 @@ lansforsakringar:
   - se.lf.mobile.android/se.lf.mobile.feature.login.module.outside.OutsideActivity
 
 bank_id_alt_1: {}
+
+wg_tunnel:
+  - com.zaneschepke.wireguardautotunnel/com.zaneschepke.wireguardautotunnel.ui.SplashActivity
