--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -115,3 +115,12 @@ lansforsakringar:
   - se.lf.mobile.android/se.lf.mobile.feature.login.module.outside.OutsideActivity
 
 bank_id_alt_1: {}
+
+xero_me:
+  - com.xero.payday/com.xero.payday.features.main.MainActivity
+
+didi:
+  - com.didiglobal.passenger/com.didi.sdk.splash.SplashActivity
+
+audio_technica_connect_alt_1:
+  - jp.co.audiotechnica.connect/com.audiotechnica.MainActivity
