Add new ComponentInfo for WG Tunnel (#931)
Co-authored-by: Evgeny <mail@hexed.pw>

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -116,6 +116,9 @@ lansforsakringar:
 
 bank_id_alt_1: {}
 
+wg_tunnel:
+  - com.zaneschepke.wireguardautotunnel/com.zaneschepke.wireguardautotunnel.ui.SplashActivity
+
 xero_me:
   - com.xero.payday/com.xero.payday.features.main.MainActivity
 
