--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -127,3 +127,54 @@ didi:
 
 audio_technica_connect_alt_1:
   - jp.co.audiotechnica.connect/com.audiotechnica.MainActivity
+
+aidata:
+  - com.asustor.aidata.plus/com.asustor.aidata.plus.LauncherActivity
+
+aidownload:
+  - com.asustor.aidownload/com.asustor.aidownload.LauncherActivity
+
+aifoto_3:
+  - com.asustor.aifoto.plus/com.asustor.aifoto.plus.login.LauncherActivity
+
+aimaster:
+  - as.arc.aicontrol/com.asustor.aimaster.LauncherActivity
+
+aimusic:
+  - com.asustor.aimusics/com.asustor.aimusics.MainActivity
+
+airemote:
+  - com.asustor.airemote/com.asustor.airemote.LauncherActivity
+
+aisecure:
+  - com.asustor.aisecure.plus/com.asustor.aisecure.plus.login.LauncherActivity
+
+aivideos:
+  - com.asustor.aivideo/com.asustor.aivideo.launcher.LauncherActivity
+
+bus_and_tram:
+  - travel.ticketless.app.lothian/travel.ticketless.app.activities.splashScreen.SplashScreenActivity
+
+charts:
+  - com.navigraph.chartsrn/com.navigraph.chartsrn.MainActivity
+
+hmrc:
+  - uk.gov.hmrc.ptcalc/uk.gov.hmrc.ptcalc.presentation.splash.SplashActivity
+
+scotrail:
+  - com.firstscotrail/com.buynowmobile.MainActivity
+
+vue:
+  - com.myvue.app/com.vue.MainActivity
+
+gubbins:
+  - com.StudioFolly.GUBBINS/com.unity3d.player.UnityPlayerActivity
+
+minimal_sudoku:
+  - com.zerologicgames.minimalsudoku/com.unity3d.player.UnityPlayerActivity
+
+octopus:
+  - energy.octopus.octopusenergy.android/mobile.kraken.android.FlapjackMainActivity
+
+rsa_authenticator:
+  - com.rsa.securidapp/com.rsa.securidapp.SplashActivityAlias
