--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -178,3 +178,33 @@ octopus:
 
 rsa_authenticator:
   - com.rsa.securidapp/com.rsa.securidapp.SplashActivityAlias
+
+arru:
+  - com.kssidll.arru/com.kssidll.arru.MainActivity
+
+book_story:
+  - ua.acclorite.book_story/ua.acclorite.book_story.Activity
+
+klock:
+  - com.koshai_limited.klock/com.koshai_limited.klock.SplashScreen
+
+music_nothing_foss:
+  - com.cyanchill.missingcore.music/com.cyanchill.missingcore.music.MainActivity
+
+private_dns_quick_toggle:
+  - ru.karasevm.privatednstoggle/ru.karasevm.privatednstoggle.MainActivity
+
+schol_arxiv:
+  - com.example.arxiv/com.example.arxiv.MainActivity
+
+sharing:
+  - com.ammar.sharing/com.ammar.sharing.activities.MainActivity.MainActivity
+
+subtypo:
+  - com.teixeira.subtitles/com.teixeira.subtitles.activities.MainActivity
+
+yamlauncher:
+  - eu.ottop.yamlauncher/eu.ottop.yamlauncher.MainActivity
+
+tripeaks:
+  - ogz.tripeaks/ogz.tripeaks.android.AndroidLauncher
