--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -10,3 +10,5 @@
 #
 my_docomo:
   - com.nttdocomo.android.mydocomo/jp.co.nttdocomo.mydocomo.activity.SplashActivity
+mynumber_card_check_app:
+  - jp.go.digital.mynumbercard_check_app/dev.keiji.khaki.yellow.cyan.ui.main.MainActivity
