Add "Idemitsu Drive On" icon

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,5 @@ my_docomo:
   - com.nttdocomo.android.mydocomo/jp.co.nttdocomo.mydocomo.activity.SplashActivity
 mynumber_card_check_app:
   - jp.go.digital.mynumbercard_check_app/dev.keiji.khaki.yellow.cyan.ui.main.MainActivity
+idemitsu_drive_on:
+  - jp.showa_shell_dmp.shellpass/jp.co.dropsystem.shell_android.MainActivity
