Update icons.yml (Camera)

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -14,3 +14,5 @@ mynumber_card_check_app:
   - jp.go.digital.mynumbercard_check_app/dev.keiji.khaki.yellow.cyan.ui.main.MainActivity
 idemitsu_drive_on:
   - jp.showa_shell_dmp.shellpass/jp.co.dropsystem.shell_android.MainActivity
+camera:
+  - jp.kyocera.camera/jp.kyocera.camera.activity.CameraActivity
