Update icons.yml (KFC)

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -16,3 +16,5 @@ idemitsu_drive_on:
   - jp.showa_shell_dmp.shellpass/jp.co.dropsystem.shell_android.MainActivity
 camera:
   - jp.kyocera.camera/jp.kyocera.camera.activity.CameraActivity
+kfc:
+  - com.yek.android.kfc.activitys/com.yum.brandkfc.SplashAct
