Update icons.yml (Domino's)

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -18,3 +18,5 @@ camera:
   - jp.kyocera.camera/jp.kyocera.camera.activity.CameraActivity
 kfc:
   - com.yek.android.kfc.activitys/com.yum.brandkfc.SplashAct
+dominos:
+  - il.co.dominos.android/il.co.dominos.android.MainActivity
