Update icons.yml (Snow)

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -20,3 +20,5 @@ kfc:
   - com.yek.android.kfc.activitys/com.yum.brandkfc.SplashAct
 dominos:
   - il.co.dominos.android/il.co.dominos.android.MainActivity
+snow_icon:
+  - org.baitmooth.snow/org.baitmooth.snow.activities.MainActivity
