--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -8,3 +8,12 @@
 #
 # new_icon_2_alt_1: {}
 #
+
+regain:
+  - ai.regainapp/ai.blox100.HomePageActivity
+
+sponge:
+  - com.prismtree.sponge/com.prismtree.sponge.MainActivity
+
+yaqoot:
+  - com.sa.maana/com.sa.maana.MainActivity
