Add Dolby ComponentInfos (#938)
Co-authored-by: GitGitro <108683123+GitGitro@users.noreply.github.com>

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -9,6 +9,9 @@
 # new_icon_2_alt_1: {}
 #
 
+dolby_atmos:
+  - co.aospa.settings.dolby/co.aospa.settings.dolby.DolbyActivity
+
 regain:
   - ai.regainapp/ai.blox100.HomePageActivity
 
@@ -17,3 +20,4 @@ sponge:
 
 yaqoot:
   - com.sa.maana/com.sa.maana.MainActivity
+
