--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -41,3 +41,18 @@ sponge:
 
 yaqoot:
   - com.sa.maana/com.sa.maana.MainActivity
+
+compose_stopwatch:
+  - com.justdeax.composeStopwatch/com.justdeax.composeStopwatch.AppActivity
+
+kitshn:
+  - de.kitshn.android/de.kitshn.android.MainActivity
+
+migu:
+  - watch.migu/watch.migu.MainActivity
+
+vega:
+  - com.vega/com.vega.MainActivity
+
+weathermaster:
+  - com.example.weathermaster/com.example.weathermaster.MainActivity
