add icons, credits @leonarrdo on Discord

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -56,3 +56,12 @@ vega:
 
 weathermaster:
   - com.example.weathermaster/com.example.weathermaster.MainActivity
+
+alaraby:
+  - om.alaraby/com.alaraby.MainActivity
+
+football_master_quiz:
+  - com.lcqd.footballerquiz/com.lcqd.app.MainActivity
+
+salatuk:
+  - com.masarat.salati/com.masarat.salati.ui.activities.MainActivity
