--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -65,3 +65,12 @@ football_master_quiz:
 
 salatuk:
   - com.masarat.salati/com.masarat.salati.ui.activities.MainActivity
+
+feedme:
+  - com.seazon.feedme/com.seazon.feedme.ui.MainActivity
+
+discover:
+  - com.discoverfinancial.mobile/c6471e4fe.w09cf6196.n6c037710.o50da4a26
+
+tricount:
+  - com.tribab.tricount.android/com.bunq.tricount.android.ui.activity.LoadingTricountStartupInfoActivity
