--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -74,3 +74,18 @@ discover:
 
 tricount:
   - com.tribab.tricount.android/com.bunq.tricount.android.ui.activity.LoadingTricountStartupInfoActivity
+
+easemytrip:
+  - com.easemytrip.android/com.easemytrip.android.SplashScreenActivity
+
+freedom:
+  - to.freedom.android2/to.freedom.android2.ui.activity.SplashActivity
+
+ideenexpo:
+  - com.ideenexpo.ideenexpoApp/com.ideenexpo.ideenexpoApp.MainActivity
+
+speak_language_learn:
+  - com.selabs.speak/com.selabs.speak.SpeakActivity
+
+ticket_servicos:
+  - br.com.mobile.ticket/br.com.mobile.ticket.MainActivity
