add icons&componentinfo (#940)
* add icons, credits @leonarrdo on Discord

* add componentinfo

* add icons

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -56,3 +56,36 @@ vega:
 
 weathermaster:
   - com.example.weathermaster/com.example.weathermaster.MainActivity
+
+alaraby:
+  - om.alaraby/com.alaraby.MainActivity
+
+football_master_quiz:
+  - com.lcqd.footballerquiz/com.lcqd.app.MainActivity
+
+salatuk:
+  - com.masarat.salati/com.masarat.salati.ui.activities.MainActivity
+
+feedme:
+  - com.seazon.feedme/com.seazon.feedme.ui.MainActivity
+
+discover:
+  - com.discoverfinancial.mobile/c6471e4fe.w09cf6196.n6c037710.o50da4a26
+
+tricount:
+  - com.tribab.tricount.android/com.bunq.tricount.android.ui.activity.LoadingTricountStartupInfoActivity
+
+easemytrip:
+  - com.easemytrip.android/com.easemytrip.android.SplashScreenActivity
+
+freedom:
+  - to.freedom.android2/to.freedom.android2.ui.activity.SplashActivity
+
+ideenexpo:
+  - com.ideenexpo.ideenexpoApp/com.ideenexpo.ideenexpoApp.MainActivity
+
+speak_language_learn:
+  - com.selabs.speak/com.selabs.speak.SpeakActivity
+
+ticket_servicos:
+  - br.com.mobile.ticket/br.com.mobile.ticket.MainActivity
