added Mrsool and Tusky's compinfo

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -89,3 +89,9 @@ speak_language_learn:
 
 ticket_servicos:
   - br.com.mobile.ticket/br.com.mobile.ticket.MainActivity
+
+mrsool:
+  - com.mrsool/com.mrsool.SplashActivity
+
+tusky:
+  - com.keylesspalace.tusky/com.keylesspalace.tusky.MainActivity
