--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -95,3 +95,54 @@ mrsool:
 
 tusky:
   - com.keylesspalace.tusky/com.keylesspalace.tusky.MainActivity
+
+batteryone:
+  - com.oneapps.batteryone/com.oneapps.batteryone.SplashScreen
+
+breasy:
+  - com.gullivernet.nw/com.gullivernet.nw.ui.activity.LoginActivity
+
+bunpo:
+  - com.bunpoapp/com.bunpoapp.ui.splash.SplashActivity
+
+busbud:
+  - com.busbud.android/com.busbud.android.Launcher
+
+drifto:
+  - com.UnluckyDuck.Drifto/com.unity3d.player.UnityPlayerActivity
+
+habitkit:
+  - com.roehl.habitkit/com.roehl.habitkit.MainActivity
+
+impots_gouv:
+  - fr.gouv.finances.smartphone.android/fr.gouv.finances.smartphone.android.MainActivity
+
+mensaplus:
+  - com.allenyin.mensaplus/com.allenyin.mensaplus.ui.other.EntryActivity
+
+mooney:
+  - com.sisal.sisalpay/com.sisal.sisalpay.base.BaseActivity
+
+my_bpost:
+  - be.bpost.mybpost/be.bpost.mybpost.features.signup.splashview.view.SplashScreenActivity
+
+octoprint:
+  - com.thespaghettidetective.android/com.thespaghettidetective.MainActivity
+
+pi_personal_ai:
+  - ai.inflection.pi/ai.inflection.pi.MainActivity
+
+portfolio_performance:
+  - software.msm.portfolio_performance/software.msm.portfolio_performance.MainActivity
+
+sahibinden:
+  - com.sahibinden/com.sahibinden.ui.supplementary.SplashScreenActivity
+
+thenx:
+  - com.sysops.thenx/com.sysops.thenx.parts.routing.RoutingActivity
+
+yle:
+  - fi.yle.ylefiapp/fi.yle.ylefiapp.MainActivity
+
+zen_com:
+  - com.zen.application/com.codequest.zen.presentation.features.entrypoint.EntryPointActivity
