--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -146,3 +146,10 @@ yle:
 
 zen_com:
   - com.zen.application/com.codequest.zen.presentation.features.entrypoint.EntryPointActivity
+
+telekom:
+  - cz.tmobile.oneapp/com.telekom.oneapp.launcher.components.launcher.LauncherActivity
+  - com.telekom.portal/com.telekom.oneapp.launcher.components.launcher.LauncherActivity
+
+icon_changer:
+  - com.app.icon.changer.customizeicon/com.app.icon.changer.customizeicon.ui.splash.SplashActivity
