--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -8,3 +8,40 @@
 #
 # new_icon_2_alt_1: {}
 #
+
+code_rain:
+  - one.zagura.CodeRainWall/one.zagura.CodeRainWall.SettingsActivity
+
+hcl_verse:
+  - com.lotus.sync.traveler/com.lotus.sync.traveler.LotusTraveler
+
+ion_launcher:
+  - one.zagura.IonLauncher/one.zagura.IonLauncher.LauncherAlias
+
+lena_adaptive:
+  - one4studio.iconpack.lenaadaptive/com.candybar.dev.activities.SplashActivity
+
+lumina_wallpapers:
+  - com.lumina.wallpapers/com.lumina.wallpapers.ui.SplashAPIActivity
+
+notion_calendar:
+  - com.cron.calendar/com.cron.calendar.MainActivity
+
+osmin:
+  - io.github.janbar.osmin/org.qtproject.qt5.android.bindings.QtActivity
+
+quetta:
+  - net.quetta.browser/com.google.android.apps.chrome.Main
+
+selfprivacy:
+  - pro.kherel.selfprivacy/org.selfprivacy.app.MainActivity
+
+study_bunny:
+  - com.superbyte.studybunny/com.unity3d.player.UnityPlayerActivity
+
+zomato:
+  - com.application.zomato/com.application.zomato.gold
+  - com.application.zomato/com.application.zomato.default
+
+zygisk_detach:
+  - com.jhc.detach/com.jhc.detach.MainActivity
