--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -45,3 +45,15 @@ zomato:
 
 zygisk_detach:
   - com.jhc.detach/com.jhc.detach.MainActivity
+
+ifood:
+  - br.com.brainweb.ifood/br.com.ifood.activity.HomeActivity
+
+rimusic:
+  - it.fast4x.rimusic/it.fast4x.rimusic.MainActivity
+
+planet_fitness_workouts:
+  - com.planetfitness/crc646aa1cfe11af761d6.MainActivity
+
+owl:
+  - io.github.yamin8000.owl/io.github.yamin8000.owl.ui.content.MainActivity
