add icons, premium request

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -57,3 +57,46 @@ planet_fitness_workouts:
 
 owl:
   - io.github.yamin8000.owl/io.github.yamin8000.owl.ui.content.MainActivity
+
+atom_turtle_beach:
+  - com.turtlebeach.atom/com.turtlebeach.atom.SplashScreen
+
+awtrix_3:
+  - de.awtrix.light/de.awtrix.light.main
+
+beurer_healthmanager:
+  - com.beurer.healthmanager/com.beurer.healthmanager.ui.activity.FragmentActivity
+
+bp_doctor_plus:
+  - com.health.yanhenew/com.health.yanhe.SplashActivity
+
+famila_nordost:
+  - com.famila.nordost/crc6402b01f4e8a4dbf7c.SplashScreenActivity
+
+glooko:
+  - com.glooko.logbook/com.glooko.logbook.activity.ftue.FtueActivity
+
+heat_it:
+  - de.ka.kamedi.heat_it/de.ka.kamedi.heat_it.android.MainActivity
+
+microsoft_mahjong:
+  - com.microsoft.mahjong/com.smokingguninc.engine.framework.SgiLauncherActivity
+
+milon_me:
+  - com.milon.milonme/com.milon.milonme.MainActivity
+
+morgenfund:
+  - com.db.am.digital.edison/com.db.am.digital.edison.SplashActivity
+
+mylife_camaps:
+  - com.camdiab.fx_alert.mgdl/com.camdiab.fx_alert.util.SplashScreen
+  - com.camdiab.fx_alert.mmoll/com.camdiab.fx_alert.util.SplashScreen
+
+neotaste:
+  - app.foodisto.foodisto/pl.angrynerds.foodisto.ui.onboarding.OnboardingActivity
+
+netto:
+  - com.valuephone.vpnetto/de.netto.b2c.activity.FragmentActivity
+
+widget_sunrise_sunset:
+  - com.sunnytapps.sunnytimes/com.sunnytapps.sunnytimes.ui.activity.MainActivity
