--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -171,3 +171,30 @@ urban_vpn:
 
 velib:
   - com.paris.velib/com.paris.velib.feature.splash.presentation.SplashActivityKt
+
+best_buy:
+  - com.bestbuy.android/com.bestbuy.android.activity.SplashActivity
+
+sofi:
+  - com.sofi.mobile/com.sofi.mobile.MainActivity
+
+brawl_stars:
+  - daniillnull.nulls.brawlstars/com.supercell.brawlstars.GameApp
+
+youtube_revanced_alt_6:
+  - app.rvx.android.youtube/com.google.android.youtube.app.honeycomb.Shell$HomeActivity
+
+sky_sports:
+  - com.bskyb.sportnews/com.sky.sport.group.MainActivity
+
+fi_money:
+  - com.epifi.paisa/com.epifi.paisa.ui.launcher.LauncherActivity
+
+youtube_kids:
+  - com.google.android.apps.youtube.kids/com.google.android.apps.youtube.kids.splash.SplashScreenActivity
+
+google_earth:
+  - com.google.earth/com.google.android.apps.earth.flutter.EarthFlutterActivity
+
+pdf_reader:
+  - pdf.pdfreader.viewer.editor.free/pdf.pdfreader.viewer.editor.free.ReaderLauncherBridgeActivity
