Added 3 new icons and comp info

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -8,3 +8,12 @@
 #
 # new_icon_2_alt_1: {}
 #
+
+gps_joystick:
+  - com.theappninjas.fakegpsjoystick/com.theappninjas.fakegpsjoystick.ui.main.MainActivityv
+
+myptptn:
+  - com.ptptnapp/com.ptptnapp.MainActivity
+
+myyes:
+  - my.yes.yes4g/my.yes.myyes4g.HomeActivity
