add icons&componentinfo, credits @leonarrdo on Discord

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -17,3 +17,22 @@ myptptn:
 
 myyes:
   - my.yes.yes4g/my.yes.myyes4g.HomeActivity
+
+for9a:
+  - com.for9a.androidfor9a/com.for9a.androidfor9a.main.SplashActivity
+
+chrome_remote_desktop_alt_1: {}
+
+kmai2:
+  - com.stateofplaygames.kami2/com.unity3d.player.UnityPlayerActivity
+
+meganum:
+  - com.crescentyr.meganum/com.unity3d.player.UnityPlayerActivity
+
+spin_the_wheel_alt_1: {}
+
+chrome_remote_desktop:
+  - com.google.chromeremotedesktop/com.google.remoting.androidwrapper.MainActivity
+
+smart_life:
+  - com.tuya.smartlife/com.smart.ThingSplashActivity
