--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -36,3 +36,9 @@ chrome_remote_desktop:
 
 smart_life:
   - com.tuya.smartlife/com.smart.ThingSplashActivity
+
+anymex:
+  - com.anime.anymex/com.anime.anymex.MainActivity
+
+image_meta_cleaner:
+  - code.alimiracle.image_meta_cleaner/code.alimiracle.image_meta_cleaner.MainActivity
