--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -42,3 +42,9 @@ anymex:
 
 image_meta_cleaner:
   - code.alimiracle.image_meta_cleaner/code.alimiracle.image_meta_cleaner.MainActivity
+
+fall_guys:
+  - com.Mediatonic.FallGuys_client/com.unity3d.player.UnityPlayerActivity
+
+skru:
+  - com.skrew.skroo.skru/com.skrew.skroo.skru.MainActivity
